more on Feynman diagrams

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -127,6 +127,23 @@
   Timestamp                = {2017.08.29}
 }
 
+@Article{Witten:1994ev,
+  Title                    = {Supersymmetric {Y}ang-{M}ills theory on a four manifold},
+  Author                   = {Witten, Edward},
+  Journal                  = {J. Math. Phys.},
+  Year                     = {1994},
+  Pages                    = {5101--5135},
+  Volume                   = {35},
+
+  Archive                  = {http://arXiv.org/abs},
+  Bibliodb                 = {yes},
+  Eprint                   = {hep-th/9403195},
+  File                     = {:Witten, Edward - Supersymmetric Yang-Mills theory on a four manifold.pdf:PDF},
+  Owner                    = {andy},
+  Slaccitation             = {%%CITATION = HEP-TH 9403195;%%},
+  Timestamp                = {2017.09.02}
+}
+
 @Article{Witten:1988ze,
   Title                    = {Topological quantum field theory},
   Author                   = {Witten, Edward},
