fixed small typo in references

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -36,7 +36,7 @@
 
 @Book{MR1031992,
   Title                    = {Spin geometry},
-  Author                   = {Lawson, Jr. and Michelsohn, Marie-Louise},
+  Author                   = {Lawson, H. Blaine and Michelsohn, Marie-Louise},
   Publisher                = {Princeton University Press},
   Year                     = {1989},
 
