--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -840,6 +840,8 @@ Thus, we have
 Both \eqref{eq:0d-partition-fn} and \eqref{eq:0d-expectation-values} are functions of
 $\lambda$ and $m$.
 
+
+
 \subsection{The perturbation series}
 
 Now, how do we \ti{compute} these functions? Let's start with $Z$, given by \eqref{eq:0d-partition-fn}.
@@ -959,6 +961,11 @@ too we expect that these series are usually ``only'' asymptotic.
 in which he gives a heuristic physical argument that the perturbation series 
 in quantum electrodynamics is only asymptotic.
 \end{exercise}
+
+Actually, $Z(m,\lambda)$ can be computed in closed form, e.g. by Mathematica:
+\begin{equation}
+  Z(m,\lambda) = \sqrt{\frac{3m}{\lambda}} \e^{3 m^2 / 4 \lambda} K_{\frac14} \left(\frac{3m^2}{\lambda}\right).
+\end{equation}
 
 
 \subsection{Feynman diagrams}
